--- a/preparing_data.ipynb
+++ b/preparing_data.ipynb
@@ -23,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " (1604, 75, 75) (1604, 75, 75) (1604, 1) (1604, 1) (1604, 75, 75, 2)\n"
+      "(1604, 75, 75) (1604, 75, 75) (1604, 1) (1604, 1) (1604, 75, 75, 3)\n"
      ]
     }
    ],
@@ -43,7 +43,8 @@
     "train_labels = train_data.is_iceberg.values.reshape(-1,1)\n",
     "train_inc_angle = train_data.inc_angle.values.reshape(-1,1)\n",
     "\n",
-    "train_dataset = np.concatenate((train_band1.reshape(-1,75,75,1), train_band2.reshape(-1,75,75,1)), axis=3)\n",
+    "train_dataset = np.concatenate((train_band1.reshape(-1,75,75,1), train_band2.reshape(-1,75,75,1), \n",
+    "                               ((train_band1+train_band2)/2).reshape(-1,75,75,1)), axis=3)\n",
     "\n",
     "print train_band1.shape, train_band2.shape, train_labels.shape, train_inc_angle.shape, train_dataset.shape\n",
     "\n",
