--- a/preparing_data.ipynb
+++ b/preparing_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,24 +13,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = pd.read_json('./data/train.json')\n",
-    "#test_data = pd.read_json('./data/test.json')"
+    "#train_data = pd.read_json('./data/train.json')\n",
+    "test_data = pd.read_json('./data/test.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1604, 75, 75) (1604, 75, 75) (1604, 1) (1604, 1) (1604, 75, 75, 3)\n"
+      "(1604, 75, 75) (1604, 75, 75) (1604, 1) (1604, 1) (1604, 75, 75, 4)\n"
      ]
     }
    ],
@@ -39,12 +39,14 @@
     "\n",
     "train_band1 = np.array([ np.array(b).astype(np.float32).reshape(75,75) for b in train_data.band_1 ])\n",
     "train_band2 = np.array([ np.array(b).astype(np.float32).reshape(75,75) for b in train_data.band_2 ])\n",
+    "train_band3 = ( train_band1 + train_band2 ) / 2.\n",
+    "train_band4 = train_band1 * train_band2\n",
     "\n",
     "train_labels = train_data.is_iceberg.values.reshape(-1,1)\n",
     "train_inc_angle = train_data.inc_angle.values.reshape(-1,1)\n",
     "\n",
     "train_dataset = np.concatenate((train_band1.reshape(-1,75,75,1), train_band2.reshape(-1,75,75,1), \n",
-    "                               ((train_band1+train_band2)/2).reshape(-1,75,75,1)), axis=3)\n",
+    "                               train_band3.reshape(-1,75,75,1), train_band4.reshape(-1,75,75,1)), axis=3)\n",
     "\n",
     "print train_band1.shape, train_band2.shape, train_labels.shape, train_inc_angle.shape, train_dataset.shape\n",
     "\n",
@@ -66,25 +68,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(8424, 75, 75) (8424, 75, 75) (8424,) (8424, 1) (8424, 75, 75, 2)\n"
+      "(8424, 75, 75) (8424, 75, 75) (8424,) (8424, 1) (8424, 75, 75, 4)\n"
      ]
     }
    ],
    "source": [
     "test_band1 = np.array([ np.array(b).astype(np.float32).reshape(75,75) for b in test_data.band_1 ])\n",
     "test_band2 = np.array([ np.array(b).astype(np.float32).reshape(75,75) for b in test_data.band_2 ])\n",
+    "test_band3 = (test_band1 + test_band2) / 2.\n",
+    "test_band4 = test_band1 * test_band2\n",
     "\n",
     "test_ids = test_data['id']\n",
     "test_inc_angle = test_data.inc_angle.values.reshape(-1,1)\n",
     "\n",
-    "test_dataset = np.concatenate((test_band1.reshape(-1,75,75,1), test_band2.reshape(-1,75,75,1)), axis=3)\n",
+    "test_dataset = np.concatenate((test_band1.reshape(-1,75,75,1), test_band2.reshape(-1,75,75,1),\n",
+    "                              test_band3.reshape(-1,75,75,1), test_band4.reshape(-1,75,75,1)), axis=3)\n",
     "\n",
     "print test_band1.shape, test_band2.shape, test_ids.shape, test_inc_angle.shape, test_dataset.shape\n",
     "\n",
     "\n",
     "np.save('./data/test/band1.npy', test_band1)\n",
     "np.save('./data/test/band2.npy', test_band2)\n",
-    "np.save('./data/test/train_dataset.npy', test_dataset)\n",
+    "np.save('./data/test/test_dataset.npy', test_dataset)\n",
     "\n",
     "np.save('./data/test/ids.npy', test_ids)\n",
     "np.save('./data/test/inc_angle.npy', test_inc_angle)\n"
