--- a/preparing_data.ipynb
+++ b/preparing_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#train_data = pd.read_json('./data/train.json')\n",
+    "train_data = pd.read_json('./data/train.json')\n",
     "test_data = pd.read_json('./data/test.json')"
    ]
   },
@@ -39,7 +39,7 @@
     "\n",
     "train_band1 = np.array([ np.array(b).astype(np.float32).reshape(75,75) for b in train_data.band_1 ])\n",
     "train_band2 = np.array([ np.array(b).astype(np.float32).reshape(75,75) for b in train_data.band_2 ])\n",
-    "train_band3 = ( train_band1 + train_band2 ) / 2.\n",
+    "train_band3 = ( train_band1 + train_band2 )\n",
     "train_band4 = train_band1 * train_band2\n",
     "\n",
     "train_labels = train_data.is_iceberg.values.reshape(-1,1)\n",
@@ -75,7 +75,7 @@
    "source": [
     "test_band1 = np.array([ np.array(b).astype(np.float32).reshape(75,75) for b in test_data.band_1 ])\n",
     "test_band2 = np.array([ np.array(b).astype(np.float32).reshape(75,75) for b in test_data.band_2 ])\n",
-    "test_band3 = (test_band1 + test_band2) / 2.\n",
+    "test_band3 = (test_band1 + test_band2)\n",
     "test_band4 = test_band1 * test_band2\n",
     "\n",
     "test_ids = test_data['id']\n",
