--- a/CNN_model-keras.ipynb
+++ b/CNN_model-keras.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,36 +563,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def predict_test_dataset(model, subid):\n",
     "    test_data, test_ids = prepare_test_data()\n",
-    "    test_data = test_data[:,:,:,[2,3]]\n",
+    "    #test_data = test_data[:,:,:,[2,3]]\n",
     "    test_preds = model.predict(test_data, batch_size=200, verbose=1)\n",
     "    sub_df = pd.DataFrame({'id':test_ids, 'is_iceberg':test_preds.reshape((-1))})\n",
-    "    sub_df.to_csv('./tmp/keras/checkpoints/4/submission-{}'.format(subid), index=False)"
+    "    sub_df.to_csv('./tmp/keras/checkpoints/5/submission-{}'.format(subid), index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8424, 75, 75, 4) - (8424,)\n",
+      "8424/8424 [==============================] - 1441s 171ms/step\n"
+     ]
+    }
+   ],
    "source": [
-    "predict_test_dataset(model, '.24')"
+    "predict_test_dataset(best_model, '.0877')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_model = load_model('./tmp/keras/checkpoints/1/ckpt-0.2062-34.hdf5',\n",
+    "best_model = load_model('./tmp/keras/checkpoints/5/ckpt2-0.0877-36.hdf5',\n",
     "                        custom_objects={'log_loss':tflosses.log_loss})"
    ]
   },
